--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -1,125 +1,154 @@
 <section class="section master-section">
-  <div class="container">
-    <p class="section-description">для настоящих ценителей атмосферы</p>
-    <h2 class="section-title masters-title">Наши мастера</h2>
-    <ul class="cards">
-      <li class="cards__item cards__item--second">
-        <div class="wrap masters-wrap">
-          <img src="./images/our-master/our-masters-img1@1x.jpg" alt="Имя Мастера" class="img master-img" />
-        </div>
-        <div class="master-information">
-          <h3 class="master-name">John Smith</h3>
-          <p class="master-specialist">Extreme Barber</p>
-          <ul class="social-list">
-            <li class="social-link">
-              <a href="" aria-label="Instagram" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-link">
-              <a href="" aria-label="Twitter" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-link">
-              <a href="" aria-label="Facebook" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-link">
-              <a href="" aria-label="Linkedin" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li class="cards__item cards__item--second">
-        <div class="wrap masters-wrap">
-          <img src="./images/our-master/our-masters-img2@1x.jpg" alt="Имя Мастера" class="img" />
-        </div>
-        <div class="master-information">
-          <h3 class="master-name">Michele Doe</h3>
-          <p class="master-specialist">Extreme Barber</p>
-          <ul class="social-list">
-            <li class="social-link">
-              <a href="" aria-label="Instagram" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-link">
-              <a href="" aria-label="Twitter" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-link">
-              <a href="" aria-label="Facebook" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-link">
-              <a href="" aria-label="Linkedin" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li class="cards__item cards__item--second">
-        <div class="wrap masters-wrap">
-          <img src="./images/our-master/our-masters-img3@1x.jpg" alt="Имя Мастера" class="img" />
-        </div>
-        <div class="master-information">
-          <h3 class="master-name">Alan Black</h3>
-          <p class="master-specialist">Extreme Barber</p>
-          <ul class="social-list">
-            <li class="social-link">
-              <a href="" aria-label="Instagram" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-link">
-              <a href="" aria-label="Twitter" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-link">
-              <a href="" aria-label="Facebook" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-link">
-              <a href="" aria-label="Linkedin" class="link">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </li>
-    </ul>
-  </div>
+	<div class="container master-container">
+		<div class="section-description-box">
+			<p class="section-description black-color">для настоящих ценителей атмосферы</p>
+			<h2 class="section-title masters-title">Наши мастера</h2>
+		</div>
+		<ul class="cards">
+			<li class="cards__item cards__item--second">
+				<div class="wrap masters-wrap">
+					<img
+						srcset="
+							./images/our-master/our-masters-img1@1x.jpg  480w,
+							./images/our-master/our-masters-img1@2x.jpg  768w,
+							./images/our-master/our-masters-img1@2x.jpg 1280w
+						"
+						src="./images/our-master/our-masters-img1@1x.jpg"
+						alt="Имя Мастера"
+						class="img masters-img"
+					/>
+				</div>
+				<div class="master-information">
+					<h3 class="master-name">John Smith</h3>
+					<p class="master-specialist">Extreme Barber</p>
+					<ul class="social-list">
+						<li class="social-link">
+							<a href="" aria-label="Instagram" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-link">
+							<a href="" aria-label="Twitter" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-link">
+							<a href="" aria-label="Facebook" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-link">
+							<a href="" aria-label="Linkedin" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="cards__item cards__item--second">
+				<div class="wrap masters-wrap">
+					<img
+						srcset="
+							./images/our-master/our-masters-img2@1x.jpg  480w,
+							./images/our-master/our-masters-img2@2x.jpg  768w,
+							./images/our-master/our-masters-img2@2x.jpg 1280w
+						"
+						src="./images/our-master/our-masters-img2@1x.jpg"
+						alt="Имя Мастера"
+						class="img masters-img"
+					/>
+				</div>
+				<div class="master-information">
+					<h3 class="master-name">Michele Doe</h3>
+					<p class="master-specialist">Extreme Barber</p>
+					<ul class="social-list">
+						<li class="social-link">
+							<a href="" aria-label="Instagram" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-link">
+							<a href="" aria-label="Twitter" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-link">
+							<a href="" aria-label="Facebook" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-link">
+							<a href="" aria-label="Linkedin" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+			<li class="cards__item cards__item--second">
+				<div class="wrap masters-wrap">
+					<img
+						srcset="
+							./images/our-master/our-masters-img3@1x.jpg  480w,
+							./images/our-master/our-masters-img3@2x.jpg  768w,
+							./images/our-master/our-masters-img3@2x.jpg 1280w
+						"
+						src="./images/our-master/our-masters-img3@1x.jpg"
+						alt="Имя Мастера"
+						class="img masters-img"
+					/>
+				</div>
+				<div class="master-information">
+					<h3 class="master-name">Alan Black</h3>
+					<p class="master-specialist">Extreme Barber</p>
+					<ul class="social-list">
+						<li class="social-link">
+							<a href="" aria-label="Instagram" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-link">
+							<a href="" aria-label="Twitter" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-link">
+							<a href="" aria-label="Facebook" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-link">
+							<a href="" aria-label="Linkedin" class="link">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+		</ul>
+	</div>
 </section>
