--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -9,8 +9,8 @@ $primary-bgc: #111319;
 $section-bgc: #f7f7f7;
 $underscore: rgba(157, 164, 189, 0.12);
 
-$main-font: 'Open Sans', sans-serif;
-$title-font: 'Raleway', sans-serif;
+$main-font: "Open Sans", sans-serif;
+$title-font: "Raleway", sans-serif;
 
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
