фикс ховера в ссылках на хедере

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,10 +12,10 @@
 		<div class="menu is-open" data-menu>
 			<nav class="nav">
 				<ul class="nav-list">
-					<li class="nav-item"><a href="#">О нас</a></li>
-					<li class="nav-item"><a href="#">Услуги и цены</a></li>
-					<li class="nav-item"><a href="#">Мастера</a></li>
-					<li class="nav-item"><a href="#">Контакты</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">Услуги и цены</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">Мастера</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">Контакты</a></li>
 				</ul>
 			</nav>
 
