--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -9,9 +9,6 @@
 
 .header-container {
 	display: flex;
-	// padding-left: 46px;
-	// padding-right: 46px;
-	// justify-content: space-between;
 
 	@media screen and (min-width: $tablet) {
 		padding-left: 15px;
@@ -33,8 +30,8 @@
 	background-image: url(../../src/images/logo--white.svg);
 
 	@media screen and (min-width: $tablet) {
-    background-image: url(../../src/images/svg/logo.svg);
-    margin-right: 30px;
+		background-image: url(../../src/images/svg/logo.svg);
+		margin-right: 30px;
 	}
 
 	@media screen and (min-width: $desktop) {
@@ -42,15 +39,12 @@
 	}
 }
 
-
-
 .nav-button {
 	display: none;
 }
 
 .pseudo-socials {
-
-display: block;
+	display: block;
 	@media screen and (min-width: 767px) {
 		display: none;
 	}
@@ -61,9 +55,17 @@ display: block;
 	justify-content: space-between;
 }
 
+.nav-link:hover,
+.nav-link:focus {
+	color: #ff6c00;
+}
+
+.nav-contact:hover,
+.nav-contact:focus {
+	color: #ff6c00;
+}
+
 @media screen and (max-width: 767px) {
-
-
 	.nav-button.nav-button.is-open .menu-icon {
 		fill: black;
 	}
@@ -162,27 +164,24 @@ display: block;
 	}
 }
 
-// ----------------------------------------бургер
-
 .nav-list {
 	display: flex;
 	flex-direction: column;
 	color: black;
 
 	@media screen and (max-width: 768px) {
-    align-items: flex-start;
-    margin-right: 40px;
+		align-items: flex-start;
+		margin-right: 40px;
 	}
 
 	@media screen and (min-width: $tablet) {
 		flex-direction: row;
-    color: #fff;
-    margin-right: 60px;
-  }
-  
-  @media screen and (min-width: $desktop) {
-		
-    margin-right: 225px;
+		color: #fff;
+		margin-right: 60px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-right: 225px;
 	}
 }
 
@@ -205,10 +204,6 @@ display: block;
 	display: flex;
 	flex-direction: column;
 
-	// @media screen and (min-width: $tablet) {
-
-	// }
-
 	@media screen and (min-width: $desktop) {
 		display: flex;
 		flex-direction: row;
@@ -219,16 +214,11 @@ display: block;
 }
 
 .contacts .button {
+	color: black;
 
-  color: black;
-
- @media screen and (min-width: $tablet) {
-   color: white;
- }
- 
-  
-  
-
+	@media screen and (min-width: $tablet) {
+		color: white;
+	}
 }
 
 .nav-contact {
