--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,10 +1,9 @@
 .hero {
 	min-height: 680px;
-	// background-color: rgba(0, 0, 0, 0.7);
 }
 
 .container-hero {
-  z-index: 2;
+	z-index: 2;
 	position: relative;
 	display: flex;
 	min-height: 680px;
@@ -22,18 +21,7 @@
 	left: -670px;
 }
 
-
 .hero-aside {
-
-  @media screen and (max-width: 767px) {
-    display: none;
-    
-  }
-
-	@media screen and (min-width: $tablet) and (max-width: $desktop) {
-		width: 90px;
-	}
-
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;
@@ -44,27 +32,32 @@
 	left: 0;
 	width: 155px;
 	padding: 120px 15px;
+
+	@media screen and (max-width: 767px) {
+		display: none;
+	}
+
+	@media screen and (min-width: $tablet) and (max-width: $desktop) {
+		width: 90px;
+	}
 }
 
 .hero-main-content {
+	z-index: 6;
+	color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 
-@media screen and (min-width: $tablet) and (max-width: $desktop) {
-    margin-left: 160px;
+	@media screen and (min-width: $tablet) and (max-width: $desktop) {
+		margin-left: 160px;
 		max-width: 355px;
-}
+	}
 
 	@media screen and (min-width: $desktop) {
 		margin-left: 250px;
 		max-width: 500px;
 	}
-
-	z-index: 6;
-
-	color: white;
-	
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
 }
 
 .hero-title {
@@ -74,35 +67,27 @@
 	font-size: 48px;
 	line-height: 1.16;
 	letter-spacing: 0.05em;
-	letter-spacing: 0.05em;
+	margin-top: 0px;
+	margin-bottom: 0px;
 	color: #ffffff;
 
 	@media screen and (min-width: $desktop) {
 		font-size: 72px;
 		line-height: 1.18;
 	}
-
-	margin-top: 0px;
-	margin-bottom: 0px;
 }
 
 .hero-subtitle {
-color: #9DA4BD;
-
-
+	color: #9da4bd;
 	font-size: 16px;
 	line-height: 1.62;
-	
-
 	margin-bottom: 0px;
 	margin-top: 20px;
 }
 
 .hero-social-list {
 	display: flex;
-
 	transform: rotate(-90deg) scaleX(-1);
-
 	flex-direction: row-reverse;
 	width: 30px;
 	position: relative;
@@ -133,15 +118,15 @@ color: #9DA4BD;
 }
 
 .dots {
- @media screen and( max-width: 767px) {
-    display: none;
-  }
-
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
 	right: 15px;
 	text-align: right;
+
+	@media screen and( max-width: 767px) {
+		display: none;
+	}
 }
 
 .dot {
@@ -180,14 +165,13 @@ color: #9DA4BD;
 }
 
 .slider-button-list {
-
-  @media screen and( max-width: 767px) {
-    display: none;
-  }
 	display: flex;
 	align-items: flex-end;
-
 	margin-left: auto;
+
+	@media screen and( max-width: 767px) {
+		display: none;
+	}
 }
 
 .slider-button-item {
@@ -205,14 +189,10 @@ color: #9DA4BD;
 	margin-right: 10px;
 }
 
-
-
-
 .slider-btn--left {
 	text-align: left;
 	color: rgba(157, 164, 189, 0.6);
 }
-
 
 .slider-btn--right {
 	text-align: right;
@@ -232,24 +212,4 @@ color: #9DA4BD;
 
 .slider-btn.slider-btn--left::after {
 	background: rgba(157, 164, 189, 0.6);
-	
 }
-
-// .slider-btn::after {
-//   content: "";
-//   display: inline-block;
-//   width: 60px;
-//   height: 5px;
-//   color: blue;
-//   position: absolute;
-//   top: 50%;
-//   left: 0px;
-//   transform: translateY(-50%);
-//   z-index: 5;
-
-// }
-
-.slider-btn-active {
-}
-
-
