--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -5,29 +5,25 @@
       <li class="cards__item">
         <div class="wrap gallery-wrap">
           <img srcset="./images/gallery/gallery-img1@1x.jpg 1x, ./images/gallery/gallery-img1@2x.jpg 2x"
-            src="./images/gallery/gallery-img1@1x.jpg" alt="Десктопные приложения" class="img">
-          <h3 class="wrap__title">Десктопные приложения</h3>
+            src="./images/gallery/gallery-img1@1x.jpg" alt="пример работы" class="img">
         </div>
       </li>
       <li class="cards__item">
         <div class="wrap gallery-wrap">
           <img srcset="./images/gallery/gallery-img2@1x.jpg 1x, ./images/gallery/gallery-img2@2x.jpg 2x"
-            src="./images/gallery/gallery-img2@1x.jpg" alt="Мобильные приложения" class="img">
-          <h3 class="wrap__title">Мобильные приложения</h3>
+            src="./images/gallery/gallery-img2@1x.jpg" alt="пример работы" class="img">
         </div>
       </li>
       <li class="cards__item">
         <div class="wrap gallery-wrap">
           <img srcset="./images/gallery/gallery-img3@1x.jpg 1x, ./images/gallery/gallery-img3@2x.jpg 2x"
-            src="./images/gallery/gallery-img3@1x.jpg" alt="Дизайнерские решения" class="img">
-          <h3 class="wrap__title">Дизайнерские решения</h3>
+            src="./images/gallery/gallery-img3@1x.jpg" alt="пример работы" class="img">
         </div>
       </li>
       <li class="cards__item">
         <div class="wrap gallery-wrap">
           <img srcset="./images/gallery/gallery-img4@1x.jpg 1x, ./images/gallery/gallery-img4@2x.jpg 2x"
-            src="./images/gallery/gallery-img4@1x.jpg" alt="Дизайнерские решения" class="img">
-          <h3 class="wrap__title">Дизайнерские решения</h3>
+            src="./images/gallery/gallery-img4@1x.jpg" alt="пример работы" class="img">
         </div>
       </li>
     </ul>
