--- a/src/sass/layouts/_masters.scss
+++ b/src/sass/layouts/_masters.scss
@@ -1,20 +1,7 @@
 .master-section {
 	background: $section-bgc;
 }
-.container.master-container {
-	@media screen and (min-width: $mobile) {
-		width: 480px;
-		margin-top: 84px;
-	}
-	@media screen and (min-width: $tablet) {
-		width: 768px;
-		margin-top: 100px;
-	}
-	@media screen and (min-width: $desktop) {
-		width: 1200px;
-		margin-top: 130px;
-	}
-}
+
 .section-description-box {
 	margin-bottom: 20px;
 }
@@ -26,9 +13,9 @@
 	margin-bottom: 44px;
 }
 .masters-wrap {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	// display: flex;
+	// justify-content: center;
+	// align-items: center;
 }
 .masters-img {
 	@media screen and (min-width: $mobile) {
