половина правок по хедеру.

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -16,7 +16,7 @@
       <span class="section-description"> A hair salon for men in Kyiv </span>
       <h1 class="hero-title">BarberShop</h1>
       <p class="hero-subtitle">
-        Мы эксперты в модных мужских стрижках. <br/> Работаем быстро, осторожно и со
+        Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со
         вкусом.
       </p>
     </div>
