--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -10,10 +10,10 @@
 .header-container {
 	display: flex;
 
-	@media screen and (min-width: $tablet) {
-		padding-left: 15px;
-		padding-right: 15px;
-	}
+	// @media screen and (min-width: $tablet) {
+	// 	padding-left: 15px;
+	// 	padding-right: 15px;
+	// }
 
 	@media screen and (min-width: $desktop) {
 		padding-left: 46px;
@@ -25,18 +25,59 @@
 	display: inline-block;
 	z-index: 10;
 
-	width: 69px;
+	width: 80px;
 	height: 56px;
-	background-image: url(../../src/images/logo--white.svg);
+  background-image: url(../../src/images/logo--white.svg);
+  background-repeat: no-repeat;
 
 	@media screen and (min-width: $tablet) {
 		background-image: url(../../src/images/svg/logo.svg);
-		margin-right: 30px;
-	}
+	  margin-right: 60px;
+    }
+	
 
 	@media screen and (min-width: $desktop) {
 		margin-right: 70px;
 	}
+}
+
+.nav {
+@media screen and (max-width:767px) {
+  font-size: 18px;
+  line-height: 25px;
+  text-align: left;
+}
+
+  font-family: Open Sans;
+font-style: normal;
+font-weight: 600;
+font-size: 12px;
+line-height: 16px;
+letter-spacing: 0.1em;
+
+color: #FFFFFF;
+
+@media screen and (min-width: $tablet) {
+  padding-bottom: 34px;
+  
+}
+}
+
+.nav-contact{
+
+@media screen and (max-width:767px) {
+  font-size: 18px;
+  line-height: 25px;
+}
+
+  font-family: Open Sans;
+font-style: normal;
+font-weight: 600;
+font-size: 12px;
+line-height: 16px;
+letter-spacing: 0.1em;
+
+color: #FFFFFF;
 }
 
 .nav-button {
@@ -52,7 +93,10 @@
 
 .menu {
 	display: flex;
-	justify-content: space-between;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+
 }
 
 .nav-link:hover,
@@ -202,14 +246,16 @@
 
 .contacts {
 	display: flex;
-	flex-direction: column;
+  flex-direction: column;
+  align-items: center;
 
 	@media screen and (min-width: $desktop) {
 		display: flex;
 		flex-direction: row;
 		flex-flow: row-reverse;
 		align-items: center;
-		margin-left: auto;
+    margin-left: auto;
+    padding-bottom: 30px; 
 	}
 }
 
