--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,53 +1,37 @@
-<section class="section">
-	<div class="container about">
-		<div class="image-wrapper">
-			<div class="about-gallery">
-				<img
-					src="./images/about-us/about-us-desktop1@1x.jpg"
-					alt=""
-					class="img"
-					srcset="./images/about-us/about-us-desktop1@2x.jpg 1x, ./images/about-us/about-us-desktop1@2x.jpg 2x"
-				/>
-			</div>
-			<div class="about-gallery">
-				<img
-					src="./images/about-us/about-us-desktop2@1x.jpg"
-					alt=""
-					class="img"
-					srcset="./images/about-us/about-us-desktop2@2x.jpg 1x, ./images/about-us/about-us-desktop2@2x.jpg 2x"
-				/>
-			</div>
-		</div>
-		<div class="image-wrapper tablet">
-			<div class="about-gallery">
-				<img
-					src="./images/about-us/about-us-img1@1x.jpg"
-					alt=""
-					class="img"
-					srcset="./images/about-us/about-us-img1@1x.jpg 1x, ./images/about-us/about-us-img1@1x.jpg 2x"
-				/>
-			</div>
-			<div class="about-gallery">
-				<img
-					src="./images/about-us/about-us-img2@1x.jpg"
-					alt=""
-					class="img"
-					srcset="./images/about-us/about-us-img2@1x.jpg 1x, ./images/about-us/about-us-img2@1x.jpg 2x"
-				/>
-			</div>
-		</div>
-		<div class="about-block">
-			<p class="section-description about">О НАС</p>
-			<h2 class="section-title about">Лучший Барбершоп твоего города</h2>
-			<p class="about-desc">
-				Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.
-			</p>
-			<p class="about-text">
-				Мы команда, которая никогда не останавливается н а достигнутом и жаждет перемен. И когда ты попадешь в руки
-				нашего мастера, то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне".
-				Поэтому, мы всегда готовы усовершенствовать каждого, кто к нам приходит!
-			</p>
-			<button class="button about">онлайн-запись</button>
-		</div>
-	</div>
+<section class="section about">
+  <div class="container about">
+    <div class="image-wrapper">
+      <div class="about-gallery">
+        <img src="./images/about-us/about-us-desktop1@1x.jpg" alt="" class="about-img" width="270"
+          srcset="./images/about-us/about-us-desktop1@2x.jpg 1x, ./images/about-us/about-us-desktop1@2x.jpg 2x" />
+      </div>
+      <div class="about-gallery">
+        <img src="./images/about-us/about-us-desktop2@1x.jpg" alt="" class="about-img" width="270px"
+          srcset="./images/about-us/about-us-desktop2@2x.jpg 1x, ./images/about-us/about-us-desktop2@2x.jpg 2x" />
+      </div>
+    </div>
+    <div class="image-wrapper tablet">
+      <div class="about-gallery">
+        <img src="./images/about-us/about-us-img1@1x.jpg" alt="" class="about-img" width="330px"
+          srcset="./images/about-us/about-us-img1@1x.jpg 1x, ./images/about-us/about-us-img1@1x.jpg 2x" />
+      </div>
+      <div class="about-gallery">
+        <img src="./images/about-us/about-us-img2@1x.jpg" alt="" class="about-img" width="330px"
+          srcset="./images/about-us/about-us-img2@1x.jpg 1x, ./images/about-us/about-us-img2@1x.jpg 2x" />
+      </div>
+    </div>
+    <div class="about-block">
+      <p class="section-description about">О НАС</p>
+      <h2 class="section-title about">Лучший Барбершоп твоего города</h2>
+      <p class="about-desc">
+        Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.
+      </p>
+      <p class="about-text">
+        Мы команда, которая никогда не останавливается на достигнутом и жаждет перемен. И когда ты попадешь в руки
+        нашего мастера, то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне".
+        Поэтому, мы всегда готовы усовершенствовать каждого, кто к нам приходит!
+      </p>
+      <button class="button button--white">онлайн-запись</button>
+    </div>
+  </div>
 </section>
