--- a/src/sass/layouts/_about-us.scss
+++ b/src/sass/layouts/_about-us.scss
@@ -1,123 +1,165 @@
 .about {
-	list-style: none;
+  list-style: none;
 
-	@media screen and (min-width: $tablet) {
-		display: flex;
-	}
-	@media screen and (min-width: $desktop) {
-		display: flex;
-		flex-direction: row;
-	}
+  @media screen and (min-width: $tablet) {
+    display: flex;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .image-wrapper {
-	width: 50%;
+  width: 50%;
 
-	@media screen and (min-width: $tablet) {
-		display: none;
-		// flex-direction: column;
-	}
-	@media screen and (min-width: $desktop) {
-		display: flex;
-		flex-direction: row;
-	}
+  @media screen and (min-width: $tablet) {
+    display: none;
+    // flex-direction: column;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .image-wrapper.tablet {
-	width: 50%;
-	@media screen and (min-width: $tablet) {
-		display: flex;
-		flex-direction: column;
-	}
-	@media screen and (min-width: $desktop) {
-		display: none;
-		// flex-direction: row;
-	}
+  width: 50%;
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: none;
+    // flex-direction: row;
+  }
 }
 
 .about-gallery {
-	padding-right: 15px;
+  display: none;
+  height: 445px;
 
-	display: none;
-	height: 445px;
+  @media screen and (min-width: $tablet) {
 
-	@media screen and (min-width: $tablet) {
-		padding: 15px;
+    display: flex;
+    width: 330px;
+    height: 235px;
+    flex-direction: column;
 
-		display: flex;
-		width: 330px;
-		height: 235px;
-		flex-direction: column;
-	}
-	@media screen and (min-width: $desktop) {
-		display: flex;
-		width: 270px;
-		height: 445px;
-		flex-direction: row;
-	}
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    width: 270px;
+    height: 445px;
+    flex-direction: row;
+
+    &:not(:first-child) {
+      margin-left: 30px;
+    }
+  }
+}
+
+.about-img {
+  @media screen and (min-width: $tablet) {
+    width: 330px;
+    height: 235px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 270px;
+    height: 445px;
+  }
 }
 
 .about-block {
-	@media screen and (min-width: $mobile) {
-		width: 100%;
-	}
+  margin-left: 10px;
+  margin-right: 10px;
 
-	@media screen and (min-width: $tablet) {
-		width: 50%;
-	}
-	@media screen and (min-width: $desktop) {
-		width: 50%;
-		padding-left: 30px;
-	}
+  @media screen and (min-width: $mobile) {
+    width: 100%;
+
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: 50%;
+    margin-right: 30px;
+    margin-left: 30px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 50%;
+    margin-left: 65px;
+
+  }
 }
 
 .section-description.about {
-	color: #303030;
+  color: #303030;
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .section-title.about {
-	@media screen and (min-width: $tablet) {
-		font-size: 28px;
-		line-height: 1.17;
-	}
-	@media screen and (min-width: $desktop) {
-		font-size: 42px;
-		line-height: 1.16;
-	}
+  font-size: 28px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  margin-bottom: 20px;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 28px;
+    line-height: 1.17;
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 42px;
+    line-height: 1.16;
+  }
 }
 
 .about-item.text {
-	padding-left: 34px;
+  padding-left: 34px;
 }
 
 .about-desc {
-	font-weight: 400;
-	letter-spacing: 0.02em;
-	color: #555555;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  color: #555555;
+  margin-top: 0;
+  margin-bottom: 20px;
 
-	@media screen and (min-width: $tablet) {
-		font-size: 16px;
-		line-height: 1.62;
-	}
-	@media screen and (min-width: $desktop) {
-		width: 90%;
 
-		font-size: 18px;
-		line-height: 1.66;
-	}
+  @media screen and (min-width: $tablet) {
+    font-size: 16px;
+    line-height: 1.62;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 90%;
+
+    font-size: 18px;
+    line-height: 1.66;
+  }
 }
 
 .about-text {
-	font-size: 14px;
-	line-height: 1.85;
-	letter-spacing: 0.02em;
-	padding-bottom: 20px;
-	margin-bottom: 0;
-	@media screen and (min-width: $desktop) {
-		width: 90%;
-	}
+  font-size: 14px;
+  line-height: 1.85;
+  letter-spacing: 0.02em;
+  margin-bottom: 40px;
+  margin-top: 0;
+
 }
 
 .button.about {
-	color: #303030;
+  color: #303030;
 }
