--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,26 +1,26 @@
 <section class="section">
   <div class="container">
     <h3 class="section-description">На латинском языке “барба” означает “борода”</h3>
-    <ul class="cards">
-      <li class="cards__item">
+    <ul class="cards cards--flex">
+      <li class="cards-item cards-item--second">
         <div class="wrap gallery-wrap">
           <img srcset="./images/gallery/gallery-img1@1x.jpg 1x, ./images/gallery/gallery-img1@2x.jpg 2x"
             src="./images/gallery/gallery-img1@1x.jpg" alt="пример работы" class="img">
         </div>
       </li>
-      <li class="cards__item">
+      <li class="cards-item cards-item--second">
         <div class="wrap gallery-wrap">
           <img srcset="./images/gallery/gallery-img2@1x.jpg 1x, ./images/gallery/gallery-img2@2x.jpg 2x"
             src="./images/gallery/gallery-img2@1x.jpg" alt="пример работы" class="img">
         </div>
       </li>
-      <li class="cards__item">
+      <li class="cards-item cards-item--second">
         <div class="wrap gallery-wrap">
           <img srcset="./images/gallery/gallery-img3@1x.jpg 1x, ./images/gallery/gallery-img3@2x.jpg 2x"
             src="./images/gallery/gallery-img3@1x.jpg" alt="пример работы" class="img">
         </div>
       </li>
-      <li class="cards__item">
+      <li class="cards-item cards-item--second">
         <div class="wrap gallery-wrap">
           <img srcset="./images/gallery/gallery-img4@1x.jpg 1x, ./images/gallery/gallery-img4@2x.jpg 2x"
             src="./images/gallery/gallery-img4@1x.jpg" alt="пример работы" class="img">
