--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -1,31 +1,47 @@
 /* card set */
 
 .cards {
-	@media screen and (min-width: $mobile) {
-	}
-	@media screen and (min-width: $tablet) {
-		align-items: center;
-		justify-content: center;
-	}
-	@media screen and (min-width: $desktop) {
-		display: flex;
-	}
+  /* outline: teal solid 3px; */
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  margin: -$tab-size;
+
+  padding: 0;
+  list-style: none;
 }
-.cards__item {
-	margin-left: auto;
-	margin-right: auto;
-	width: 370px;
-	height: 502px;
+
+.cards--flex {
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
-.cards__item:not(:last-child) {
-	@media screen and (min-width: $mobile) {
-		margin-bottom: 64px;
-	}
-	@media screen and (min-width: $tablet) {
-		margin-bottom: 64px;
-	}
-	@media screen and (min-width: $desktop) {
-		margin-right: 30px;
-		margin-bottom: 0px;
-	}
+
+.cards-item {
+  /* position: relative; */
+  padding: $tab-size;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: $tablet) {
+    width: calc(100% / 2);
+  }
+  @media screen and (min-width: $desktop) {
+    width: calc(100% / 3);
+  }
+}
+
+.cards-item--second {
+  @media screen and (min-width: $tablet) {
+    width: calc(100% / 2);
+  }
+  @media screen and (min-width: $desktop) {
+    width: calc(100% / 4);
+  }
 }
