fix masters tablet 450px

--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -5,7 +5,7 @@
       <h2 class="section-title masters-title">Наши мастера</h2>
     </div>
     <ul class="cards">
-      <li class="cards-item">
+      <li class="cards-item  cards-item-450px">
         <div class="wrap masters-wrap">
           <img srcset="
               ./images/our-master/our-masters-img1@1x.jpg  480w,
@@ -48,7 +48,7 @@
           </ul>
         </div>
       </li>
-      <li class="cards-item">
+      <li class="cards-item  cards-item-450px">
         <div class="wrap masters-wrap">
           <img srcset="
               ./images/our-master/our-masters-img2@1x.jpg  480w,
@@ -91,7 +91,7 @@
           </ul>
         </div>
       </li>
-      <li class="cards-item">
+      <li class="cards-item  cards-item-450px">
         <div class="wrap masters-wrap">
           <img srcset="
               ./images/our-master/our-masters-img3@1x.jpg  480w,
