--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -45,3 +45,9 @@
     width: calc(100% / 4);
   }
 }
+
+.cards-item-450px {
+  @media screen and (min-width: $tablet) and (max-width: calc(#{$desktop} - 1px)) {
+    width: 480px;
+  }
+}
