--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -10,7 +10,6 @@
 	padding-bottom: 40px;
 	padding-top: 60px;
 	background-image: url(../../src/images/header/main-hero-bcg-img-mini.jpg);
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	background-repeat: no-repeat;
 	background-position: right 0;
 }
@@ -104,6 +103,10 @@
 .hero-social-link {
 	display: block;
 	transform: scaleX(-1);
+
+	&:hover {
+		color: #FF6C00;
+	}
 }
 
 .hero-social-list:first-of-type::before {
@@ -111,7 +114,7 @@
 	display: inline-block;
 	width: 1px;
 	height: 60px;
-	background: red;
+	background: #303030;
 	position: absolute;
 	top: -50%;
 	left: 50px;
