--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
 	<div class="container header-container">
-		<span class="logo"></span>
+		<a href="./index.html"> <span class="logo"></span> </a>	
 
 		<button type="button" class="nav-button is-open" data-menu-button>
 			<svg class="menu-icon" width="40" height="40" aria-label="переключатель мобильного меню">
