--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -84,6 +84,11 @@
 }
 
 .pseudo-socials-link {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.35;
+  color: #303030;
+
   &:hover {
     color: #ff6c00;
   }
@@ -201,7 +206,7 @@
     height: 1px;
     background-color: #303030;
     left: 0;
-    top: 16px;
+    top: 20px;
   }
 }
 
@@ -258,6 +263,10 @@
 
 .contacts .button {
   color: black;
+
+  &:hover {
+    color: white;
+  }
 
   @media screen and (min-width: $tablet) {
     color: white;
