--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -38,13 +38,11 @@
   line-height: 1.36;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  // color: $black-text-color;
   color: rgba(157, 164, 189, 0.6);
-
 }
 
 .section-description::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 7px;
   left: -80px;
@@ -53,8 +51,8 @@
   margin-right: 20px;
   width: 60px;
   height: 1px;
-
-  background: $black-text-color;
+  color: rgba(157, 164, 189, 0.6);
+  background-color: rgba(157, 164, 189, 0.6);;
 }
 
 .section-discription--gray {
@@ -72,4 +70,3 @@
 .section-discription--white::before {
   background: $white-text-color;
 }
-
