изменен общий класс H3 и добалвен стиль к нему в галереи

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="container">
-    <h3 class="section-description">На латинском языке “барба” означает “борода”</h3>
+    <h3 class="section-description description-gallery">На латинском языке “барба” означает “борода”</h3>
     <ul class="cards cards--flex">
       <li class="cards-item cards-item--second">
         <div class="wrap gallery-wrap">
