--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -38,9 +38,7 @@
   line-height: 1.36;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  // color: $black-text-color;
-  color: rgba(157, 164, 189, 0.6);
-
+  color: $black-text-color;
 }
 
 .section-description::before {
@@ -61,15 +59,7 @@
   color: $header-price-text;
 }
 
-.section-discription--white {
-  color: $white-text-color;
-}
-
 .section-discription--gray::before {
   background: $header-price-text;
-}
-
-.section-discription--white::before {
-  background: $white-text-color;
 }
 
