--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -10,12 +10,9 @@
   letter-spacing: 0.02em;
   color: $secondary-grey-color;
 
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.8),
-      rgba(47, 48, 58, 0.8)
-    ),
-    url(../images/footer/footer-480@1x.png);
+  background-image: url(../images/footer/footer-480@1x.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
@@ -25,12 +22,7 @@
     }
   }
   @media screen and (min-width: $mobile) {
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.8),
-        rgba(47, 48, 58, 0.8)
-      ),
-      url(../images/footer/footer-768@1x.png);
+    background-image: url(../images/footer/footer-768@1x.png);
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
@@ -42,12 +34,7 @@
   }
 
   @media screen and (min-width: $tablet) {
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.8),
-        rgba(47, 48, 58, 0.8)
-      ),
-      url(../images/footer/footer-1600@1x.png);
+    background-image: url(../images/footer/footer-1600@1x.png);
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
