--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -52,7 +52,7 @@
   width: 60px;
   height: 1px;
   color: rgba(157, 164, 189, 0.6);
-  background-color: rgba(157, 164, 189, 0.6);;
+  background-color: rgba(157, 164, 189, 0.6);
 }
 
 .section-discription--gray {
@@ -68,5 +68,5 @@
 }
 
 .section-discription--white::before {
-  background: $white-text-color;
+  background: $footer-modal-text;
 }
