--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,11 @@
 <header class="header">
 	<div class="container header-container">
-		<a href="./index.html"> <span class="logo"></span> </a>	
-
+		<a href="./index.html" class="logo">
+			<svg class="icon-logo" width="69" height="55" alt="Логотип компании">
+				<use href="../src/images/sprite.svg#icon-logo"></use>
+			</svg>
+		</a>
+		
 		<button type="button" class="nav-button is-open" data-menu-button>
 			<svg class="menu-icon" width="40" height="40" aria-label="переключатель мобильного меню">
 				<use class="menu-icon-open" href="./images/sprite.svg#menu-icon-open"></use>
