--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -9,49 +9,65 @@
 
 .header-container {
   display: flex;
-
-  @media screen and (min-width: $desktop) {
-    padding-left: 46px;
-    padding-right: 46px;
-  }
 }
 
 .logo {
-  display: inline-block;
-  z-index: 10;
-
-  width: 80px;
-  height: 56px;
-  background-image: url(../../src/images/logo--white.svg);
-  background-repeat: no-repeat;
+  fill: white;
 
   @media screen and (min-width: $tablet) {
-    background-image: url(../../src/images/svg/logo.svg);
-    margin-right: 60px;
+    fill: black;
+    margin-right: 64px;
   }
-
   @media screen and (min-width: $desktop) {
     margin-right: 70px;
   }
 }
 
 .nav {
-  font-family: Open Sans;
-  font-style: normal;
   font-weight: 600;
   font-size: 12px;
-  line-height: 16px;
+  line-height: 1.33;
   letter-spacing: 0.1em;
   color: #ffffff;
 
   @media screen and (max-width: 767px) {
     font-size: 18px;
-    line-height: 25px;
+    line-height: 1.38;
     text-align: left;
   }
 
   @media screen and (min-width: $tablet) {
     padding-bottom: 34px;
+  }
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: column;
+  color: black;
+
+  @media screen and (max-width: 76px) {
+    align-items: flex-start;
+  }
+
+  @media screen and (min-width: $tablet) {
+    flex-direction: row;
+    color: #fff;
+  }
+}
+
+.nav-item {
+  padding-top: 13px;
+  padding-bottom: 13px;
+}
+
+.nav-item:not(:last-child) {
+  @media screen and (min-width: $tablet) {
+    margin-right: 24px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-right: 40px;
   }
 }
 
@@ -63,13 +79,53 @@
   line-height: 16px;
   letter-spacing: 0.1em;
 
-  color: #ffffff;
+  color: black;
 
   @media screen and (max-width: 767px) {
     font-size: 18px;
-    line-height: 25px;
+    line-height: 1.33;
+  }
+
+  @media screen and (min-width: $tablet) and (max-width: 1279px) {
+    margin-top: 20px;
+    color: #fff;
+  }
+	@media screen and (min-width: $desktop) {
+    padding-top: 13px;
+    padding-bottom: 13px;
+    margin-right: 40px;
+    color: #fff;
+  }
+
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    flex-direction: row;
+    flex-flow: row-reverse;
+    align-items: center;
+    margin-left: auto;
+    padding-bottom: 30px;
   }
 }
+
+.contacts .button {
+  color: black;
+
+  &:hover {
+    color: white;
+  }
+
+  @media screen and (min-width: $tablet) {
+    color: white;
+  }
+}
+ 
 
 .nav-button {
   display: none;
@@ -78,6 +134,7 @@
 
 .pseudo-socials {
   display: block;
+
   @media screen and (min-width: 767px) {
     display: none;
   }
@@ -112,7 +169,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .nav-button.nav-button.is-open .menu-icon {
+  .nav-button.is-open .menu-icon {
     fill: black;
   }
 
@@ -156,7 +213,6 @@
     padding-left: 50px;
     padding-right: 50px;
 
-    text-align: center;
     font-size: 20px;
     border-top: 1px solid #ececec;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
@@ -207,83 +263,5 @@
     background-color: #303030;
     left: 0;
     top: 20px;
-  }
-}
-
-.nav-list {
-  display: flex;
-  flex-direction: column;
-  color: black;
-
-  @media screen and (max-width: 76px) {
-    align-items: flex-start;
-    // margin-right: 40px;
-  }
-
-  @media screen and (min-width: $tablet) {
-    flex-direction: row;
-    color: #fff;
-    // margin-right: 60px;
-  }
-
-  // @media screen and (min-width: $desktop) {
-  // 	margin-right: 225px;
-  // }
-}
-
-.nav-item {
-  padding-top: 13px;
-  padding-bottom: 13px;
-}
-
-.nav-item:not(:last-child) {
-  @media screen and (min-width: $tablet) {
-    margin-right: 24px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    margin-right: 40px;
-  }
-}
-
-.contacts {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  @media screen and (min-width: $desktop) {
-    display: flex;
-    flex-direction: row;
-    flex-flow: row-reverse;
-    align-items: center;
-    margin-left: auto;
-    padding-bottom: 30px;
-  }
-}
-
-.contacts .button {
-  color: black;
-
-  &:hover {
-    color: white;
-  }
-
-  @media screen and (min-width: $tablet) {
-    color: white;
-  }
-}
-
-.nav-contact {
-  color: black;
-  @media screen and (min-width: $tablet) and (max-width: 1279px) {
-    margin-top: 20px;
-    color: #fff;
-  }
-
-  @media screen and (min-width: $desktop) {
-    padding-top: 13px;
-    padding-bottom: 13px;
-    margin-right: 40px;
-    color: #fff;
   }
 }
