--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -5,13 +5,14 @@
       <h2 class="section-title masters-title">Наши мастера</h2>
     </div>
     <ul class="cards">
-      <li class="cards-item  cards-item-450px">
+      <li class="cards-item cards-item-450px">
         <div class="wrap masters-wrap">
-          <img srcset="
-              ./images/our-master/our-masters-img1@1x.jpg  480w,
-              ./images/our-master/our-masters-img1@2x.jpg  768w,
-              ./images/our-master/our-masters-img1@2x.jpg 1280w
-            " src="./images/our-master/our-masters-img1@1x.jpg" alt="Имя Мастера" class="img masters-img" />
+          <img
+            srcset="./images/our-master/our-masters-img1@1x.jpg 1x, ./images/our-master/our-masters-img1@2x.jpg 2x"
+            src="./images/our-master/our-masters-img1@1x.jpg"
+            alt="Имя Мастера"
+            class="img masters-img"
+          />
         </div>
         <div class="master-information">
           <h3 class="master-name">John Smith</h3>
@@ -48,13 +49,14 @@
           </ul>
         </div>
       </li>
-      <li class="cards-item  cards-item-450px">
+      <li class="cards-item cards-item-450px">
         <div class="wrap masters-wrap">
-          <img srcset="
-              ./images/our-master/our-masters-img2@1x.jpg  480w,
-              ./images/our-master/our-masters-img2@2x.jpg  768w,
-              ./images/our-master/our-masters-img2@2x.jpg 1280w
-            " src="./images/our-master/our-masters-img2@1x.jpg" alt="Имя Мастера" class="img masters-img" />
+          <img
+            srcset="./images/our-master/our-masters-img2@1x.jpg 1x, ./images/our-master/our-masters-img2@2x.jpg 2x"
+            src="./images/our-master/our-masters-img2@1x.jpg"
+            alt="Имя Мастера"
+            class="img masters-img"
+          />
         </div>
         <div class="master-information">
           <h3 class="master-name">Michele Doe</h3>
@@ -91,13 +93,14 @@
           </ul>
         </div>
       </li>
-      <li class="cards-item  cards-item-450px">
+      <li class="cards-item cards-item-450px">
         <div class="wrap masters-wrap">
-          <img srcset="
-              ./images/our-master/our-masters-img3@1x.jpg  480w,
-              ./images/our-master/our-masters-img3@2x.jpg  768w,
-              ./images/our-master/our-masters-img3@2x.jpg 1280w
-            " src="./images/our-master/our-masters-img3@1x.jpg" alt="Имя Мастера" class="img masters-img" />
+          <img
+            srcset="./images/our-master/our-masters-img3@1x.jpg 1x, ./images/our-master/our-masters-img3@2x.jpg 2x"
+            src="./images/our-master/our-masters-img3@1x.jpg"
+            alt="Имя Мастера"
+            class="img masters-img"
+          />
         </div>
         <div class="master-information">
           <h3 class="master-name">Alan Black</h3>
