--- a/src/sass/components/_social.scss
+++ b/src/sass/components/_social.scss
@@ -1,33 +1,34 @@
 // Круглые иконки
 .social-list {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .social-link {
-	display: flex;
-	width: 44px;
-	height: 44px;
-	cursor: pointer;
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 
-	border-radius: 50%;
-	background-color: $white-text-color;
-
-	&:not(:last-child) {
-		margin-right: 10px;
-	}
-
-	&:hover .social-icon,
-	&:focus .social-icon {
-		fill: $accent-color;
-	}
+  &:hover .social-icon,
+  &:focus .social-icon {
+    fill: $accent-color;
+  }
 }
 
 .social-icon {
-	width: 20px;
-	height: 20px;
-	margin: 12px;
-	fill: $black-text-color;
+  width: 20px;
+  height: 20px;
+  margin: 12px;
+  fill: $black-text-color;
 }
-
+.link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: $white-text-color;
+}
