пофиксили всё что можно остальное в трелло

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -40,6 +40,8 @@
 @import './components/menu';
 @import './components/overlay';
 @import './components/menu-mob';
+@import './components/dots';
+@import './components/slider-button';
 @import './components/contacts';
 @import './components/buttons';
 @import './components/aside';
